--- a/gitalias/.gitconfig
+++ b/gitalias/.gitconfig
@@ -12,3 +12,6 @@
     git push --set-upstream origin \"$branch\"; \
     }; f"
   pdev = pull origin develop
+  loc =  "!f() {  \
+    git log --shortstat --since \"$1\" --until \"$2\" | grep \"files changed\" | awk '{files+=$1; inserted+=$4; deleted+=$6} END {print \"files changed\", files, \"lines inserted:\", inserted, \"lines deleted:\", deleted}'; \
+    }; f"
